updates on home page wording, changed cloud to css grid

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
   <title>Katie Snead | Portfolio</title>
 
   <!-- Custom Styles -->
-  <link href="../styles/reset.css" rel="stylesheet">
+  <link href="../styles/normalize.css" rel="stylesheet">
   <link href="../styles/main.css" rel="stylesheet">
 
 
@@ -33,15 +33,16 @@
 
 <body>
 
+
   <!-- Hero -->
   <header class="hero-section">
 
     <nav class="sticky-nav">
       <a href="index.html" class="my-logo">logo</a>
       <ul class="nav-links">
-        <li><a href="/pages/cloud.html">Work</a></li>
-        <li><a href="/pages/about.html">About</a></li>
-        <li><a href="/pages/contact.html">Contact</a>
+        <li><a href="../pages/cloud.html">Work</a></li>
+        <li><a href="../pages/about.html">About</a></li>
+        <li><a href="../pages/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -76,9 +77,9 @@
         <p class="about-text">Born and raised in Phoenix, I can handle some heat. I’ve spent my career with customers of
           all shapes
           and sizes
-          with one goal in mind: keep them coming back for more! Now looking to use that experience to build great
-          experiences for people everywhere</p>
-        <a href="about.html"><button>Tell Me More!</button></a>
+          with one goal in mind: keep them coming back for more! Now using that passion to build great
+          experiences for people everywhere.</p>
+        <a href="about.html"><button>More Details</button></a>
       </div>
       <div class="container-about-pic">
         <img src="../images/IMG_2621.jpeg" alt="Katie and her dog Gobi backpacking" class="about-pic" />
@@ -96,7 +97,7 @@
       <a href="https://twitter.com/KatieJo_Snead"><i class=" fab fa-twitter"></i></a>
       <a href="https://www.linkedin.com/in/katiesnead/"><i class=" fab fa-linkedin-in"></i></a>
       <a href="http://www.github.com/katiesnead"><i class="fab fa-github"></i></a>
-      <h6>©2019 | Designed and developed by Katie Snead</h6>
+      <h6>©2020 | Designed and developed by Katie Snead</h6>
     </div>
   </footer>
 </body>
