add custom font, started working on alignment within css grid

--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -22,9 +22,9 @@
   <title>Case Study | Katalogus</title>
 
   <!-- Custom Styles -->
+  <link href="../styles/reset.css" rel="stylesheet">
   <link href="../styles/normalize.css" rel="stylesheet">
   <link href="../styles/main.css" rel="stylesheet">
-
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ea031136f0.js" crossorigin="anonymous"></script>
@@ -60,7 +60,7 @@
         </div>
         <div class="cloud-hero-text">
           <h1 class="cloud-name">Katalogus</h1>
-          <p class="cloud-statement">The powerhouse cloud platform no one has, but everyone wants.</p>
+          <h2 class="cloud-statement">The powerhouse cloud platform no one has, but everyone wants.</h2>
           <button class="cloud-button cloud-button_hero-prototype">View Figma Prototype</button>
         </div>
       </div>
@@ -69,7 +69,7 @@
       <div class="cloud-overview-lists">
 
         <div class="cloud-roles">
-          <h2>Roles</h2>
+          <h3>Roles</h3>
           <ul>
             <li>UX Research</li>
             <li>Product Design</li>
@@ -79,7 +79,7 @@
         </div>
 
         <div class="cloud-tools">
-          <h2>Tools</h2>
+          <h3>Tools</h3>
           <ul>
             <li>Figma</li>
             <li>Draw.io</li>
@@ -89,7 +89,7 @@
         </div>
 
         <div class="cloud-deliverables">
-          <h2>Deliverables</h2>
+          <h3>Deliverables</h3>
           <ul>
             <li>Competitive Analysis</li>
             <li>Personas & User Research Reports</li>
@@ -107,20 +107,20 @@
 
       <div class="cloud-overview-intro">
         <div class="cloud-summary">
-          <h2>Summary</h2>
+          <h3>Summary</h3>
           <p>Individuals currently need multiple storage options, depending on the content; Katalogus provides a
             “one-stop-shop” solution that everyone can get behind! Katalogus is a cloud storage web application focused
             on the ability to organize and share all your content, web and personal, in one secure place.</p>
         </div>
 
         <div class="cloud-problem">
-          <h2>Problem</h2>
+          <h3>Problem</h3>
           <p>Currently, client clients are typically having to go to PlatformX for documents, PlatformY for pictures and
             PlatformZ for links (articles / recipes / etc). This is frustrating and hard to manage.</p>
         </div>
 
         <div class="cloud-solution">
-          <h2>Solution</h2>
+          <h3>Solution</h3>
           <p>Katalogus is your only cloud platform that has the capability of storing files of all types: PDF, word
             documents, pictures, website links, and more! Plus, by keeping the platform simple in its interface and
             similar to other platforms, customers will have an easy time taking to jump to a new cloud service.</p>
@@ -136,7 +136,7 @@
       <section class="cloud-comp-analysis">
 
         <div class="cloud-comp-analysis-title">
-          <h2>Competitive Analysis</h2>
+          <h3>Competitive Analysis</h3>
         </div>
         <div class="cloud-comp-analysis-overview">
           <p>I was very worried that there would really be no true solution to bringing in another player to the cloud
@@ -186,7 +186,7 @@
 
       <section class="cloud-user-research">
         <div class="cloud-user-research_title">
-          <h2>User Research</h2>
+          <h3>User Research</h3>
         </div>
         <div class="cloud-user-research_summary">
           <p>Through a survey, I was able to see that participants have many different platforms to save content on,
@@ -263,7 +263,7 @@
 
       <section class="cloud-personas">
         <div class="cloud-personas-title">
-          <h2>User Personas</h2>
+          <h3>User Personas</h3>
         </div>
         <div class="cloud-personas-summary">
           <p>After analyzing the survey data, paired with the knowledge gained from the competitive analysis, it was
@@ -303,7 +303,7 @@
       <section class="cloud-stories">
 
         <div class="cloud-stories-title">
-          <h2>User Stories</h2>
+          <h3>User Stories</h3>
         </div>
         <div class="cloud-stories-text">
           <p>Keeping Rebecca and Marc in mind, and going off the results from both the survey and the competitive
@@ -340,7 +340,7 @@
 
       <section class="cloud-flows">
         <div class="cloud-flows-title">
-          <h2>User Flows</h2>
+          <h3>User Flows</h3>
         </div>
 
         <div class="cloud-flows-text">
@@ -372,9 +372,9 @@
 
       <section class="cloud-wireframes">
         <div class="cloud-wireframes-title">
-          <h2>
+          <h3>
             Wireframes
-          </h2>
+          </h3>
         </div>
 
         <div class="cloud-wireframes-text">
@@ -408,9 +408,9 @@
 
       <section class="cloud-mockups">
         <div class="cloud-mockups-title">
-          <h2>
+          <h3>
             Mockups
-          </h2>
+          </h3>
         </div>
 
         <div class="cloud-mockups-text-1">
@@ -459,7 +459,7 @@
 
         <section class="cloud-usability">
           <div class="cloud-usability-title">
-            <h2>Usability Testing</h2>
+            <h3>Usability Testing</h3>
           </div>
 
           <div class="cloud-usability_card-1">
@@ -521,7 +521,7 @@
         <section class="cloud-preference">
 
           <div class="cloud-preference-title">
-            <h2>Preference (A/B) Testing</h2>
+            <h3>Preference (A/B) Testing</h3>
           </div>
 
           <div class="cloud-preference-text-1">
@@ -549,106 +549,119 @@
 
 
 
-      <section class="cloud-branding">
-        <div class="cloud-branding-title">
-          <h2 class="cloud-tab-title">Branding</h2>
+      <section class="cloud-allbranding">
+        <div class="cloud-tab-title">
+          <h2>Branding</h2>
         </div>
-
-        <div class="cloud-branding-text-1">
-          <p>Since a wide variety of individuals were being targeted with this platform, with the focus being saving,
-            organizing, and sharing, I started with a mindmap to see what ideas came off of that. Two words in
-            particular really stood out: catalogue and inventory, which then opened the flood gates for logo ideas.
-            <br><br>
-            When considering logos, I mimicked imagery of inventory tags, clouds, data groupings and paperclips. The
-            paperclip idea was what continued -- a sturdy tool to hold together all your paperwork was the perfect idea
-            for a sturdy platform to hold all your online content.
-          </p>
-        </div>
-
-
-        <div class="cloud-branding-img1">
-          <img src="http://lorempixel.com/350/260">
-        </div>
-
-        <div class="cloud-branding-img2">
-          <img src="http://lorempixel.com/350/260">
-        </div>
+        <section class="cloud-branding">
+          <div class="cloud-branding-title">
+            <h3>Mindmap, Moodboard & Logo</h3>
+          </div>
+          <div class="cloud-branding-text-1">
+            <p>Since a wide variety of individuals were being targeted with this platform, with the focus being saving,
+              organizing, and sharing, I started with a mindmap to see what ideas came off of that. Two words in
+              particular really stood out: catalogue and inventory, which then opened the flood gates for logo ideas.
+              <br><br>
+              When considering logos, I mimicked imagery of inventory tags, clouds, data groupings and paperclips. The
+              paperclip idea was what continued -- a sturdy tool to hold together all your paperwork was the perfect
+              idea
+              for a sturdy platform to hold all your online content.
+            </p>
+          </div>
 
 
-        <div class="cloud-branding-text-2">
-          <p>From there, I created a moodboard that displayed pictures of organization as well as companionship.
-            Initially,
-            Melgrim was chosen for the main brand typography, but it is not legible beyond the company name, so that is
-            how it has
-            been chosen to remain. The only time Melgrim is used is with the company name itself.</p>
-        </div>
+          <div class="cloud-branding-img1">
+            <img src="http://lorempixel.com/350/260">
+          </div>
 
-        <div class="cloud-branding_button">
-          <button class="cloud-button cloud-button_branding">View Brand Guidelines</button>
+          <div class="cloud-branding-img2">
+            <img src="http://lorempixel.com/350/260">
+          </div>
+
+
+          <div class="cloud-branding-text-2">
+            <p>From there, I created a moodboard that displayed pictures of organization as well as companionship.
+              Initially,
+              Melgrim was chosen for the main brand typography, but it is not legible beyond the company name, so that
+              is
+              how it has
+              been chosen to remain. The only time Melgrim is used is with the company name itself.</p>
+          </div>
+
+          <div class="cloud-branding_button">
+            <button class="cloud-button cloud-button_branding">View Brand Guidelines</button>
+        </section>
       </section>
 
 
-
-      <section class="cloud-conclusion">
-
-        <div class="cloud-conclusion-title">
-          <h2 class="cloud-tab-title">Conclusion</h2>
+      <section class="cloud-allconclusion">
+        <div class="cloud-tab-title">
+          <h2>Conclusion</h2>
         </div>
 
-        <div class="cloud-conclusion-text">
-          <p>
-            Initially, I was very worried that there would really be no true solution to bringing in another player to
-            the cloud
-            storage marketplace. It is already saturated with big-hitters that can easily sweep a newcomer underwater.
-            However, I
-            was quick to find out that there are some holes in each of the platforms that would allow someone else to
-            come in and
-            succeed.
-            <br><br>
-            I focused a lot during my user research on keeping a flow in the survey while also keeping it short and
-            simple. If done
-            again, I would have dropped the idea of questions flowing together, understanding that each question is
-            important
-            in-and-of itself, and asked more well-rounded questions during my user research stage. I still had great
-            information to
-            go off of, but could have had even better research had I taken the time to do so.
-            <br><br>
-            I learned a great deal from this project, including the need to test font choices at all scales as well as
-            choosing a
-            color scheme with overlapping colors. Mistakes made early on were that the font choice did not scale well
-            for smaller
-            text and the color scheme looked great side by side, but was inaccessible when it came time to using colors
-            chosen for
-            buttons and other overlapping designs. I learned the importance of learning how to use “components” when
-            designing
-            rather than changing something in each frame when an update was made (yikes, I know).
-            <br><br>
-            This project, more than anything, made me painfully aware of both research and properly using the tool at
-            hand. I
-            believe wholeheartedly that research done properly at the front end will significantly improve the product
-            near the back
-            end (including stopping critical errors from being made that completely wastes time and effort!). I also see
-            the power
-            that design tools have and how valuable they can be in making design efficient, when used properly.
-            <br><br>
-            I am truly proud of this project all together, with it being my first project completed from start to
-            finish, I am most
-            proud of the persistence I had while working on the mockups. There were many times I was truly stuck, unable
-            to figure
-            out what the next step is. While working completely remote, with no true “team” to turn to, I found and
-            utilized many
-            resources so keep moving and to get assistance and collaboration to continue to build a great product. There
-            were times
-            where I felt like there was no light at the end of the tunnel, but I kept chugging along and now have a
-            completed
-            project that I can proudly put my name on!
-            <br><br>
-            I’d also like to thank you for taking the time to read / scroll / skim (whichever!) my case study. Please do
-            not
-            hesitate to reach out with any questions, I am more than happy to discuss any detail of this project.
-          </p>
-        </div>
+        <section class"cloud-conclusion">
+          <h3 class="cloud-conclusion-title">Final Words</h3>
+          </div>
 
+          <div class="cloud-conclusion-text">
+            <p>
+              Initially, I was very worried that there would really be no true solution to bringing in another player to
+              the cloud
+              storage marketplace. It is already saturated with big-hitters that can easily sweep a newcomer underwater.
+              However, I
+              was quick to find out that there are some holes in each of the platforms that would allow someone else to
+              come in and
+              succeed.
+              <br><br>
+              I focused a lot during my user research on keeping a flow in the survey while also keeping it short and
+              simple. If done
+              again, I would have dropped the idea of questions flowing together, understanding that each question is
+              important
+              in-and-of itself, and asked more well-rounded questions during my user research stage. I still had great
+              information to
+              go off of, but could have had even better research had I taken the time to do so.
+              <br><br>
+              I learned a great deal from this project, including the need to test font choices at all scales as well as
+              choosing a
+              color scheme with overlapping colors. Mistakes made early on were that the font choice did not scale well
+              for smaller
+              text and the color scheme looked great side by side, but was inaccessible when it came time to using
+              colors
+              chosen for
+              buttons and other overlapping designs. I learned the importance of learning how to use “components” when
+              designing
+              rather than changing something in each frame when an update was made (yikes, I know).
+              <br><br>
+              This project, more than anything, made me painfully aware of both research and properly using the tool at
+              hand. I
+              believe wholeheartedly that research done properly at the front end will significantly improve the product
+              near the back
+              end (including stopping critical errors from being made that completely wastes time and effort!). I also
+              see
+              the power
+              that design tools have and how valuable they can be in making design efficient, when used properly.
+              <br><br>
+              I am truly proud of this project all together, with it being my first project completed from start to
+              finish, I am most
+              proud of the persistence I had while working on the mockups. There were many times I was truly stuck,
+              unable
+              to figure
+              out what the next step is. While working completely remote, with no true “team” to turn to, I found and
+              utilized many
+              resources so keep moving and to get assistance and collaboration to continue to build a great product.
+              There
+              were times
+              where I felt like there was no light at the end of the tunnel, but I kept chugging along and now have a
+              completed
+              project that I can proudly put my name on!
+              <br><br>
+              I’d also like to thank you for taking the time to read / scroll / skim (whichever!) my case study. Please
+              do
+              not
+              hesitate to reach out with any questions, I am more than happy to discuss any detail of this project.
+            </p>
+          </div>
+        </section>
       </section>
 
 
