fixed some more spacing issues

--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -321,15 +321,16 @@
         </div>
 
         <div class="cloud-stories-examples">
-          <ul>As a new user, I want to:
-            <li>Create an account</li>
-            <li>Learn about the site's features and benefits</li>
-          </ul>
-          <ul>As a returning user, I want to:
-            <li>Upload a file from my computer</li>
-            <li>Save an article / recipe / etc. from the internet</li>
-            <li>Share a file with someone</li>
-          </ul>
+          <ol>As a new user, I want to:
+            <li>Create an account
+            <li>Learn about the site's features and benefits
+          </ol>
+          <br>
+          <ol>As a returning user, I want to:
+            <li>Upload a file from my computer
+            <li>Save an article / recipe / etc. from the internet
+            <li>Share a file with someone
+          </ol>
         </div>
 
 
@@ -420,7 +421,7 @@
             screens, I realized that there was a potential accessibility issue with the color scheme chosen. That was
             tested on a
             third party site and subsequently failed.
-            <br><br>
+            <br>
             I used the same general color (maroon/purple) to signify elegance and power but also added in orange for a
             hint of
             excitement. With those two being the main colors, I chose complementary colors that aligned with a beautiful
@@ -441,7 +442,7 @@
             becomes difficult to read. With that knowledge, the font pairing choice was changed to Oswald and Montserrat
             to maintain
             hierarchy while also having a similar font style.
-            <br><br>
+            <br>
             Based on the information architecture I had in mind and the feedback received, I followed the minor third
             typography
             scale for the landing page and the major second scale for the rest of the platform. The landing page starts
